# AoC-2021

./: .gitignore  README.md  config.json  pyproject.toml
data/: README.md
src/: day00_template.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day14.py
src/common/: meta_utils.py
