[tool.poetry]
name = "aoc-2021"
version = "0.1.0"
description = "Advent of Code 2021 solutions"
authors = ["Alberto Santagostino"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.26.0"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
pylint = "^2.12.1"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
